# dodge-the-creeps-nix-rust

./: .gitignore  devenv.nix  devenv.yaml
godot/: Hud.tscn  Main.tscn  Mob.tscn  Player.tscn  export_presets.cfg  rust.gdextension
rust/: Cargo.toml  build-wasm.sh
rust/.cargo/: config
