[package]
name = "dodge-the-creeps"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", default-features = false, features = ["experimental-wasm"] }
rand = "0.8"
